# cubigolf

./: README.md
arduino_imu/sketch_aug13a/: sketch_aug13a.ino
arduino_imu/sketch_aug29/: ReadMe.adoc  sketch.json  sketch_aug29.ino
cubigolf_loc/: CMakeLists.txt  package.xml
cubigolf_loc/launch/: cg_localisation.launch
cubigolf_loc/params/: cg_ekf.yaml
cubigolf_loc/scripts/: cg_data_publisher.py  cg_platform_transforms.py  cg_serial_reader.py
motion_driver/src/: sensor_driver.ino
pi_deserializer/: AutoThreadStartUp.py  Imu_reader.py
