<?xml version="1.0"?>
<package>
  <name>cubigolf_loc</name>
  <version>0.0.0</version>
  <description>IMU and RTK serial reader and localisation stack</description>
  <maintainer email="keshav.chintamani@gmail.com">Keshav Chintamani</maintainer>
  <license>TODO</license>
  <author email="keshav.chintamani@gmail.com">Keshav Chintamani</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>